--- a/gateway/Makefile
+++ b/gateway/Makefile
@@ -6,7 +6,7 @@ gql:
 proto:
 	protoc --go_out=. --go_opt=paths=source_relative \
 				--go-grpc_out=. --go-grpc_opt=paths=source_relative \
-				./schema.proto
+				./service/schema.proto
 
 dep:
 	go mod tidy && go mod vendor && go fmt
